Use `dirs` crate to fix default local folder for keyring

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ simple_logger = "5.0.0"
 log = "0.4.22"
 time = { version = "*", features = ["formatting"] }
 thiserror = "*"
+dirs = "*"
 
 ## ------------------Serialization/Encoding ----------------- ##
 borsh = { version = "*", features = ["derive"] }
