Implement SLH-DSA-SHA2-128s + changed signature API
- Implemented SLH-DSA-SHA2-128s with RustCrypto's `slh-dsa` crate (not audited).
- Changed Signature scheme API (simplified by removing sign_detach and open and changed private key references to mutable ones)
- Commented other non FIPS compliant implementations
- added `ml-kem` crate.
- Added notice to README.md

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,6 +58,9 @@ pqcrypto-dilithium = "0.5.0"
 pqcrypto-falcon = "0.3.0"
 pqcrypto-traits = "0.3.5"
 
+ml-kem = "0.2.1"
+slh-dsa = "0.1.0"
+
 ### Encryption at rest
 argon2 = "*"
 blake3 = { version = "*", default-features = false }
